force-app/main/default/objects/Question_Category_Quantity__c/Question_Category_Quantity__c.object-meta.xml
<CustomObject>
    <label>Question Category Quantity</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Question Category Quantity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Category Quantities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>