force-app/main/default/objects/Question_Category_Quantity__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder</fullName>
            </value>
            <value>
                <fullName>Another placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>